Añadimos index.html y test.rb

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+ESTOY EN LA RAMA HOTFIX, HAY UN ERROR Y VOY A REPARARLO...
+
+DESDE HOTFIX - PROBANDO.
+
 <h1>DESPLIEGUE DE APPS WEB MOLA!</h1>
 
 <h1>Apache dominado, y git casi tambien... </h1>
